--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             
              <div id="portfolio">
-                <h2 class="heading">Portfolio</h2>
+                <h2 class="heading">Projects</h2>
                 <div class="line"></div>
 
                 <div class="project-container">
