--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <a href="#about" class="active">About</a>
                     <a href="#skills">Skills</a>
                     <a href="#education">Education</a>
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="#projects">Projects</a>
                 </nav>
              </div>
 
@@ -136,7 +136,7 @@
             </div>
 
             
-             <div id="portfolio">
+             <div id="projects">
                 <h2 class="heading">Projects</h2>
                 <div class="line"></div>
 
