--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
              <div id="about">
                 <h2 class="heading">About Me</h2>
                 <div class="line"></div>
-                <p class="content">I am a creative and passionate Frontend Developer with a keen eye for detail and a love for building beautiful, functional, and user-friendly web experiences. My journey in web development is driven by a desire to turn complex problems into simple, elegant solutions. I specialize in modern web technologies and am always eager to learn and adapt to the ever-evolving digital landscape.</p>
+                <p class="content">I am a creative and passionate Software Developer with a keen eye for detail and a love for building beautiful, functional, and user-friendly web experiences. My journey in web development is driven by a desire to turn complex problems into simple, elegant solutions. I specialize in modern web technologies and am always eager to learn and adapt to the ever-evolving digital landscape.</p>
              </div>
 
             
