adding my image

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             
             <div class="profile">
-                <img src="" alt="" >
+                <img src="image.jpeg" alt="" >
                 <h2>Mayank Raj</h2>
                 <p>Software Developer</p>
             </div>
