changes in html code

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="year">2023-2027</div>
                         <h3 class="degree">Bachelor of Technology in CSE</h3>
                         <p class="college">Lovely Professional University,Jalandhar, Punjab</p>
-                        <p class="work">Focused on software development, algorithms, and web technologies.Focused on learning Algorithm, DBMS, Computer Network and Operating system.</p>
+                        <p class="work">Focused on software development, web technologies and learning Algorithm, DBMS, Computer Network and Operating system.</p>
                         <div class="goal"></div>
                     </div>
                     <div class="edsecond">
