--- a/index.html
+++ b/index.html
@@ -105,6 +105,24 @@
                         <h3>Python</h3>
                     </div>
 
+                    <div class="item">
+                        <img src="react.png" alt="">
+                        <h3>React</h3>
+                    </div>
+
+                    <div class="item">
+                        <img src="https://img.icons8.com/?size=96&id=54087&format=png" alt="">
+                        <h3>Node JS</h3>
+                    </div>
+                    <div class="item">
+                        <img src="https://cdn-icons-png.flaticon.com/256/25/25231.png" alt="">
+                        <h3>GitHub</h3>
+                    </div>
+                    <div class="item">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoDIgMnM0heB0KERH-XYh7QBXebPoDTYC73V3bnef38A&s" alt="">
+                        <h3>My SQL</h3>
+                    </div>
+
                 </div>
              </div>
 
