changes in skills section

--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
                         <img src="https://simpleicons.org/icons/react.svg" alt="">
                         <h3>React</h3>
                     </div>
-                    <div class="item">
-                        <img src="https://simpleicons.org/icons/git.svg" alt="">
-                        <h3>Git & Github</h3>
-                    </div>
+                    
                     <div class="item">
                         <img src="https://simpleicons.org/icons/typescript.svg" alt="">
                         <h3>Typescript</h3>
@@ -106,21 +103,30 @@
                     </div>
 
                     <div class="item">
+                        <img src="https://cdn-icons-png.flaticon.com/512/152/152760.png" alt="">
+                        <h3>Java</h3>
+                    </div>
+
+                    <div class="item">
                         <img src="react.png" alt="">
                         <h3>React</h3>
                     </div>
 
                     <div class="item">
-                        <img src="https://img.icons8.com/?size=96&id=54087&format=png" alt="">
+                        <img src="https://simpleicons.org/icons/nodedotjs.svg" alt="">
                         <h3>Node JS</h3>
                     </div>
                     <div class="item">
                         <img src="https://cdn-icons-png.flaticon.com/256/25/25231.png" alt="">
-                        <h3>GitHub</h3>
+                        <h3>Git & Github</h3>
                     </div>
                     <div class="item">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoDIgMnM0heB0KERH-XYh7QBXebPoDTYC73V3bnef38A&s" alt="">
+                        <img src="mysql.svg" alt="">
                         <h3>My SQL</h3>
+                    </div>
+                    <div class="item">
+                        <img src="https://simpleicons.org/icons/pytorch.svg" alt="">
+                        <h3>PyTorch</h3>
                     </div>
 
                 </div>
@@ -135,7 +141,7 @@
                     <div class="edfirst">
                         <div class="year">2023-2027</div>
                         <h3 class="degree">Bachelor of Technology in CSE</h3>
-                        <p class="college">Lovely Professional University,Jalandhar, Punjab</p>
+                        <p class="college">Lovely Professional University, Jalandhar, Punjab</p>
                         <p class="work">Focused on software development, web technologies and learning Algorithm, DBMS, Computer Network and Operating system.</p>
                         <div class="goal"></div>
                     </div>
